--- a/css/dectop-large.css
+++ b/css/dectop-large.css
@@ -352,8 +352,11 @@ article {
    
   
     margin-top: 350px;
-    margin-bottom: 780px;
+    margin-bottom: 110px;
 
+}
+.box-margin-botton{
+    margin-bottom: 100px;
 }
 
 .display {
@@ -503,10 +506,10 @@ footer {
 }
 .box-azul1{
     background-color: rgba(0, 143, 231, 1);
-    width: 47%;
+   
 }
 .box-azul3{
-    width: 47%;
+    
     background-color: rgba(0, 213, 248, 1);
 }
 .container-box{
@@ -520,7 +523,7 @@ footer {
 }
 .box-vermelho{
     background-color: rgba(255, 80, 80, 1);
-    width: 47%;
+   
 }
 .text-box{
     font-size: 20px;
@@ -530,8 +533,20 @@ footer {
 }
 .box-text-end{
    text-align: end;
+   margin-top: -35px;
 }
-
+.anside1{
+    margin-top: -30px;
+    margin-bottom: 50px;
+    border-radius: 4%;
+    padding-top: 30px;
+    margin-right: 30px
+}
+.anside3{
+    margin-bottom: 30px;
+    border-radius: 4%;
+    margin-right: 30px
+}
 
 
 
