--- a/css/dectop-large.css
+++ b/css/dectop-large.css
@@ -542,10 +542,20 @@ footer {
     padding-top: 30px;
     margin-right: 30px
 }
+.anside2{
+
+    margin-top: 30px;
+    border-radius: 4%;
+}
 .anside3{
     margin-bottom: 30px;
     border-radius: 4%;
     margin-right: 30px
+}
+.anside4{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 4%;
 }
 
 
