--- a/css/dectop-large.css
+++ b/css/dectop-large.css
@@ -314,7 +314,7 @@ article {
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+   
 }
 .container-img-object-1{
     position: absolute;
@@ -336,8 +336,7 @@ article {
     letter-spacing: 0px;
     text-align: center;
     color: #FFFFFF;
-    margin-top: 140px;
-    margin-bottom: 140px;
+    
 
 }
 
@@ -382,7 +381,7 @@ article {
 .texto-img-footer {
 
     margin-top: 130px;
-    margin-bottom: 130px;
+   
 }
 
 .conteudo-footer {
@@ -580,6 +579,13 @@ footer {
 .justify-center{
     justify-content: center;
 }
+.bottom-{
+margin-bottom: -100px;
+}
+.margin-bottom{
+    margin-bottom: 350px;
+}
+
 
 
 
