--- a/css/dectop-large.css
+++ b/css/dectop-large.css
@@ -538,7 +538,7 @@ footer {
 }
 .anside1{
     margin-top: -30px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     border-radius: 4%;
     padding-top: 30px;
     margin-right: 30px
@@ -586,7 +586,12 @@ margin-bottom: -100px;
     margin-bottom: 350px;
 }
 
-
+.table-cell{
+    display: table-cell;
+}
+.box-1{
+    margin: 0px 0px 0px 20px
+}
 
 
 
