--- a/css/mobile.css
+++ b/css/mobile.css
@@ -248,6 +248,35 @@
     .mb{
         width: 25%;
     }
+    .teste-display{
+        display: block;
+    }
+    .text-box-1{
+        color: black;
+        font-size: 16px;
+    }
+    .width-50-bottom{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    .botao-preto{
+        margin: 0;
+    }
+    .teste-img{
+   justify-content: space-around;
+      align-items: flex-end;
+    }
+    .size{
+        max-width: 40px;
+    }
+    
+    .bottom-{
+        margin-bottom: -100px;
+    }
+    .central-box{
+        width: 100%;
+    }
 
 
 }
