--- a/css/mobile.css
+++ b/css/mobile.css
@@ -277,6 +277,13 @@
     .central-box{
         width: 100%;
     }
+    .anside-top{
+        width: 100%;
+    }
+    .text-box-top{
+        font-size: 24px;
+        text-align: center;
+    }
 
 
 }
