--- a/css/dectop-large.css
+++ b/css/dectop-large.css
@@ -413,6 +413,7 @@ article {
 .sub {
     font-size: 30px;
     line-height: 38px;
+    color: rgba(137, 137, 137, 1);
 }
 
 .subtitulo {
@@ -550,8 +551,11 @@ footer {
 }
 .text-box{
     font-size: 20px;
-    line-height: 28px;
+   line-height: 1.4;
     color: #FFFFFF;
+    border-top: 3px solid rgba(255, 255, 255, 1);
+    margin-left: 10%;
+    margin-right: 10%;
 
 }
 .box-text-end{
