--- a/css/mobile.css
+++ b/css/mobile.css
@@ -57,7 +57,7 @@
     }
 
     .texto-main {
-        margin-top: 60px;
+      order: 1;
 
     }
 
@@ -106,7 +106,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        
     }
 
     .container-img div {
@@ -164,11 +164,17 @@
 
 
     .nav-main {
-        display: block;
+       flex-direction: column;
 
         padding-top: 90px;
 
     }
+    .nav-main-1 {
+        flex-direction: column;
+ 
+         padding-top: 0;
+ 
+     }
 
     .-top {
         font-family: Arial, Helvetica, sans-serif;
@@ -309,15 +315,28 @@
     .width-70{
         font-size: 24px;
         line-height: 1.4;
+        max-width: 100%;
+        text-align: center;
     }
     .width-70-1{
         font-size: 18px;
+        max-width: 100%;
+        text-align: center;
     }
     .width-50{
         font-size: 18px;
+        max-width: 100%;
+        text-align: center;
     }
     .width-50-1{
         font-size: 18px;
+        max-width: 100%;
+        text-align: center;
+    }
+    .nav-margin{
+        display: flex;
+        justify-content: center;
+        margin: 0;
     }
 
 
