--- a/css/mobile.css
+++ b/css/mobile.css
@@ -36,8 +36,8 @@
         margin: 0px -8% 0px 0px;
         display: flex;
         justify-content: flex-end;
-        
-       
+
+
     }
 
     .subtitulo-main {
@@ -57,7 +57,7 @@
     }
 
     .texto-main {
-      order: 1;
+        order: 1;
 
     }
 
@@ -106,7 +106,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        
+
     }
 
     .container-img div {
@@ -164,17 +164,18 @@
 
 
     .nav-main {
-       flex-direction: column;
+        flex-direction: column;
 
         padding-top: 90px;
 
     }
+
     .nav-main-1 {
         flex-direction: column;
- 
-         padding-top: 0;
- 
-     }
+
+        padding-top: 0;
+
+    }
 
     .-top {
         font-family: Arial, Helvetica, sans-serif;
@@ -255,87 +256,123 @@
     .max-width {
         padding: 0;
     }
-    .mb{
+
+    .mb {
         width: 25%;
     }
-    .teste-display{
+
+    .teste-display {
         display: block;
     }
-    .text-box-1{
+
+    .text-box-1 {
         color: black;
         font-size: 16px;
     }
-    .width-50-bottom{
+
+    .width-50-bottom {
         display: flex;
         justify-content: center;
         width: 100%;
     }
-    .botao-preto{
+
+    .botao-preto {
         margin: 0;
     }
-    .teste-img{
-   justify-content: space-around;
-      align-items: flex-end;
+
+    .teste-img {
+        justify-content: space-around;
+        align-items: flex-end;
     }
-    .size{
+
+    .size {
         max-width: 40px;
     }
-    
-    .bottom-{
-        margin-bottom: -10px;
+
+    .bottom- {
+        margin-bottom: -660px;
     }
-    .central-box{
+
+    .central-box {
         width: 100%;
     }
-    .anside-top{
+
+    .anside-top {
         width: 100%;
     }
-    .text-box-top{
+
+    .text-box-top {
         font-size: 24px;
         text-align: center;
     }
-    .top-{
-        top: -45px;
+
+    .top- {
+        top: -63px;
     }
-    .img-head{
+
+    .img-head {
         bottom: -27%;
-        
+
     }
-    .flex-box{
+
+    .flex-box {
         display: block;
     }
-    .sub{
+
+    .sub {
         font-size: 16px;
         line-height: 1.5;
     }
+
+    .text-box-dowload {
+        font-size: 16px;
+
+    }
     .text-box{
         font-size: 16px;
-        
+        padding-bottom: 14px;
     }
-    .width-70{
+
+    .width-70 {
         font-size: 24px;
         line-height: 1.4;
         max-width: 100%;
         text-align: center;
     }
-    .width-70-1{
+
+    .width-70-1 {
         font-size: 18px;
         max-width: 100%;
         text-align: center;
     }
-    .width-50{
+
+    .width-50 {
         font-size: 18px;
         max-width: 100%;
         text-align: center;
     }
-    .width-50-1{
+
+    .width-50-1 {
         font-size: 18px;
         max-width: 100%;
         text-align: center;
     }
-    .nav-margin{
+
+    .nav-margin {
         display: flex;
         justify-content: center;
+        margin: 0;
+    }
+    .margin-bottom{
+        margin-bottom: 600px;
+    }
+    .top-box-bottom{
+        top: -740px;
+    }
+    .box-text-end{
+        margin-top: -53px;
+    }
+    .center{
         margin: 0;
     }
 
