--- a/css/dectop-large.css
+++ b/css/dectop-large.css
@@ -302,7 +302,7 @@ article {
 }
 
 .container {
-    width: 1280px;
+    width: 1400px;
     max-width: 100%;
     margin: 0 auto;
 }
@@ -318,7 +318,8 @@ article {
 
     top: -180px;
 }
-.top-box-bottom{
+
+.top-box-bottom {
     top: -900px;
 }
 
@@ -333,6 +334,7 @@ article {
     position: absolute;
     width: 100%;
     height: 100%;
+
 }
 
 .container-img div {
@@ -389,19 +391,19 @@ article {
 
 .center {
     text-align: center;
-    
+
 
 }
 
 .anside-dowload {
-    border-radius: 4%;
+    border-radius: 20px;
 }
 
 .anside-top {
     margin-bottom: 100px;
     width: 50%;
     background-color: rgba(0, 213, 248, 1);
-    border-radius: 4%;
+    border-radius: 20px;
 }
 
 .center-top {
@@ -412,7 +414,7 @@ article {
 .text-box-top {
     font-size: 42px;
     color: rgba(43, 43, 43, 1);
-    
+
     margin: 0;
     text-align: left;
 }
@@ -544,6 +546,7 @@ footer {
 
 .box-branco {
     background-color: #FFFFFF;
+    border-radius: 20px;
 }
 
 .box-azul1 {
@@ -605,7 +608,7 @@ footer {
 .anside1 {
     margin-top: -30px;
     margin-bottom: 30px;
-    border-radius: 4%;
+    border-radius: 10px;
     padding-top: 30px;
     margin-right: 30px
 }
@@ -613,19 +616,19 @@ footer {
 .anside2 {
 
     margin-top: 30px;
-    border-radius: 4%;
+    border-radius: 10px;
 }
 
 .anside3 {
     margin-bottom: 30px;
-    border-radius: 4%;
+    border-radius: 10px;
     margin-right: 30px
 }
 
 .anside4 {
     margin-top: 30px;
     margin-bottom: -20px;
-    border-radius: 4%;
+    border-radius: 10px;
 }
 
 .position {
@@ -677,7 +680,8 @@ footer {
 
 
 }
-.box-1-top{
+
+.box-1-top {
     margin: 0px 0px 0px 20px;
     color: rgba(255, 255, 255, 1);
 }
@@ -733,7 +737,7 @@ footer {
 
 .anside-bottom {
     margin-bottom: 50px;
-    border-radius: 4%;
+    border-radius: 20px;
 }
 
 .num-box {
@@ -768,11 +772,18 @@ footer {
     width: 100%;
     background-color: rgba(0, 143, 231, 1);
 }
-.position-absolute{
-    position: absolute!important;
+
+.position-absolute {
+    position: absolute !important;
 }
-.margin-top-card{
+
+.margin-top-card {
     margin-top: -70px;
+}
+
+.padding-bottom-box-branco {
+    padding-bottom: 1px;
+
 }
 
 
