--- a/css/mobile.css
+++ b/css/mobile.css
@@ -90,7 +90,7 @@
             32px;
         letter-spacing: 0px;
         text-align: left;
-        color: #FFFFFF;
+       
         margin-top: 100px;
         margin-bottom: 100px;
 
@@ -380,6 +380,13 @@
 
     .anside3 {
         margin-top: 30px;
+    }
+    .margin-cards-2-3{
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .margin-cards-1-2-4-5{
+        margin-top: 0;
     }
 
 
