--- a/css/desctop-large.css
+++ b/css/desctop-large.css
@@ -723,8 +723,9 @@ footer {
 }
 
 .width-50-bottom {
-    width: 50%;
-    text-align: center;
+    width: 100%;
+    padding-left: 15%;
+    
 }
 
 .botao-preto {
@@ -734,6 +735,7 @@ footer {
 
 .text-box-1 {
     font-size: 30px;
+    text-align: initial;
 }
 
 .anside-bottom {
